--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -15,6 +15,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  &__checkbox {
+    width: 100%;
+  }
 }
 
 .form-check__input {
